# editor

./: .gitignore  CMakeLists.txt  README.md
data/shaders/: fragment.vs  primitive.fs  primitive.vs  shader.vs  text.fs  text.vs
data/text/: alice.txt
includes/config/: config.h
includes/editor/: character.h  editor.h  font.h  freetype.h  openglprimitiverenderer.h  primitiverenderer.h  resourcemanager.h  settings.h  shader.h  textrenderer.h  texture2d.h
includes/glad/: glad.h
includes/util/: fileutil.h
src/: main.cpp
src/editor/: character.cpp  editor.cpp  font.cpp  freetype.cpp  openglprimitiverenderer.cpp  resourcemanager.cpp  settings.cpp  shader.cpp  textrenderer.cpp  texture.cpp  texture2d.cpp
src/glad/: glad.c
src/util/: fileutil.cpp
